# fast_internet_computer_consensus

./: .env.example  Cargo.toml  Dockerfile  benchmark.py  connect_local.py  docker-compose.yml  print_disk_memory.py  proposer_latency.py  reboot_all.py  setup_replicas.py  start_replicas.py  start_replicas_kobi.py  throughput.py  update_repo.py
paper/diagrams/: fastpath_source.drawio  fastpath_source_2.drawio
paper/experiments/6us+6asia+4/: peers.txt
paper/experiments/6us+6eu+3as/: peers.txt
paper/experiments/6us+6eu+3as/__MACOSX/6us+6eu+3as/: ._peers.txt
paper/map/: map.py
paper/table/: latex_table.tgn
src/: artifact_manager.rs  consensus_layer.rs  crypto.rs  main.rs  network_layer.rs  time_source.rs
src/consensus_layer/: artifacts.rs  consensus.rs  height_index.rs  pool.rs  pool_reader.rs
src/consensus_layer/consensus_subcomponents/: acknowledger.rs  aggregator.rs  block_maker.rs  finalizer.rs  goodifier.rs  notary.rs  validator.rs
