[package]
name = "fast_internet_computer_consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.43"
futures = "0.3"
async-std = { version = "1.10", features = ["attributes"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha2 = "0.9"
hex = "0.4"
crossbeam-channel = "0.5"
structopt = "0.3"
tide = "0.16"